@@ -1,3 +1,8 @@
+2001-12-05  Ezra Peisach  <epeisach@mit.edu>
+
+	* gss-client.c, gss-misc.c, gss-server.c: Cast buffer length to
+	int in length argument for printf.
+
 2001-11-19  Ezra Peisach  <epeisach@mit.edu>
 
 	* gss-server.c (server_establish_context, sign_server): Ensure
